--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -47,6 +47,11 @@
 /*=== MIXINS ===*/
 /*=== VARIABLES ===*/
 /*=== MEDIA QUERY ===*/
+.navbar-header{
+  width: 182px;
+  height: 58px;
+}
+
 * {
   outline: 0;
   margin: 0;
