--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Potepanec</title>
+    <title><%= yield(:title) %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
   </head>
   <body>
     <div class="main-wrapper">
@@ -51,11 +50,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <div class="navbar-brand"><%= link_to image_tag("logo.png"),"/potepan/index" %></div>
+              <div class="navbar-brand"><%= link_to image_tag("logo.png"), potepan_path %></div>
             </div>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li class="active"><%= link_to "Home","/potepan/index" %></li>
+                <li class="active"><%= link_to "Home", potepan_path %></li>
                 <li class="dropdown megaDropMenu">
                   <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="300" data-close-others="true" aria-expanded="false">Shop</a>
                 </li>
@@ -66,5 +65,6 @@
       </div>
     </div>
     <%= yield %>
+    <%= javascript_include_tag 'application' %>
   </body>
 </html>
