部分テンプレートの変数名を変更

--- a/app/views/potepan/products/show.html.erb
+++ b/app/views/potepan/products/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for(:title, @product.name) %>
 
-<%= render partial: "layouts/pageheader", locals: { name: @product.name }%>
+<%= render partial: "layouts/pageheader", locals: { product_name: @product.name }%>
 <section class="mainContent clearfix">
   <div class="container">
     <div class="row singleProduct">
