--- a/app/views/layouts/_pageheader.html.erb
+++ b/app/views/layouts/_pageheader.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-xs-6">
         <div class="page-title">
-          <h2><%= name %></h2>
+          <h2><%= product_name %></h2>
         </div>
       </div>
       <div class="col-xs-6">
@@ -11,7 +11,7 @@
           <li>
             <a><%= link_to "Home", potepan_path %></a>
           </li>
-          <li class="active"><%= name %></li>
+          <li class="active"><%= product_name %></li>
         </ol>
       </div>
     </div>
