header,footer,modalの部分テンプレート化、strage.ymlの環境変数設定

--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -2929,7 +2929,7 @@ body.bodyColor.container {
 .singleProduct .media .media-body .list-inline {
   margin-bottom: 30px;
 }
-.singleProduct .media .media-body .list-inline li a {
+.singleProduct .media .media-body .list-inline li i {
   color: #b4b4b4;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -2937,7 +2937,7 @@ body.bodyColor.container {
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
-.singleProduct .media .media-body .list-inline li a i {
+.singleProduct .media .media-body .list-inline li i {
   margin-right: 8px;
 }
 .singleProduct .media .media-body .list-inline li a:hover {
