--- a/app/views/layouts/_pageheader.html.erb
+++ b/app/views/layouts/_pageheader.html.erb
@@ -8,9 +8,7 @@
       </div>
       <div class="col-xs-6">
         <ol class="breadcrumb pull-right">
-          <li>
-            <a><%= link_to "Home", potepan_path %></a>
-          </li>
+          <li><%= link_to "Home", potepan_path %></li>
           <li class="active"><%= product_name %></li>
         </ol>
       </div>
