--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,79 +7,9 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
   </head>
   <body>
-    <div class="main-wrapper">
-      <div class="header clearfix">
-        <div class="topBar">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6 hidden-sm hidden-xs">
-                <ul class="list-inline">
-                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                </ul>
-              </div>
-              <div class="col-md-6 col-xs-12">
-                <ul class="list-inline pull-right">
-                  <li class="dropdown searchBox">
-                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-search"></i></a>
-                    <ul class="dropdown-menu dropdown-menu-right">
-                      <form id="form01" action="product-grid-left-sidebar.html" method="post">
-                      　　<li>
-                      　　  <span class="input-group">
-                        　　  <input type="text" name="searchWord" class="form-control" placeholder="Search…" aria-describedby="basic-addon2">
-                        　　  <span onclick="FormSubmit();" class="input-group-addon addPointer" id="basic-addon2">検索</span>
-                      　　  </span>
-                    　　  </li>
-                      </form>
-                    </ul>
-                  </li>
-                  <li class="dropdown">
-                    <a href="cart-page.html" class="dropdown-toggle" data-toggle="dropdown disabled"><i class="fa fa-shopping-cart"></i></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <nav class="navbar navbar-main navbar-default" role="navigation">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <div class="navbar-brand"><%= link_to image_tag("logo.png"), potepan_path %></div>
-            </div>
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-              <ul class="nav navbar-nav navbar-right">
-                <li class="active"><%= link_to "Home", potepan_path %></li>
-                <li class="dropdown megaDropMenu">
-                  <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="300" data-close-others="true" aria-expanded="false">Shop</a>
-                </li>
-              </ul>
-            </div><!-- /.navbar-collapse -->
-          </div>
-        </nav>
-      </div>
-    </div>
+    <%= render partial: "layouts/header" %>
     <%= yield %>
-    <div id="footer" class="copyRight clearfix">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-7 col-xs-12">
-            <p>&copy; 2016-<%= Time.current.year %> Copyright Potepan Store .</p>
-          </div>
-          <div class="col-sm-5 col-xs-12">
-            <ul class="list-inline">
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+    <%= render partial: "layouts/footer" %>
     <%= javascript_include_tag 'application' %>
   </body>
 </html>
