--- a/app/views/potepan/products/show.html.erb
+++ b/app/views/potepan/products/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for(:title, @product.name) %>
 
-<%= render partial: "layouts/pageheader", locals: { product_name: @product.name }%>
+<%= render partial: "layouts/pageheader", locals: { product_name: @product.name } %>
 <section class="mainContent clearfix">
   <div class="container">
     <div class="row singleProduct">
@@ -34,7 +34,7 @@
           </div>
           <div class="media-body">
             <ul class="list-inline">
-              <li><a><i class="fa fa-reply" aria-hidden="true"></i><%= link_to "一覧ページへ戻る", potepan_path %></a></li>
+              <li><i class="fa fa-reply" aria-hidden="true"></i><%= link_to "一覧ページへ戻る", potepan_path %></li>
             </ul>
             <h2><%= @product.name %></h2>
             <h3><%= @product.display_price %></h3>
@@ -114,59 +114,4 @@
     </div>
   </div>
 </section>
-<div class="modal fade" id="login" tabindex="-1" role="dialog">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3 class="modal-title">log in</h3>
-      </div>
-      <div class="modal-body">
-        <form action="" method="POST" role="form">
-          <div class="form-group">
-            <label for="login-email">Enter Email</label>
-            <input type="email" class="form-control" id="login-email">
-          </div>
-          <div class="form-group">
-            <label for="login-password">Password</label>
-            <input type="password" class="form-control" id="login-password">
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Remember Me
-            </label>
-          </div>
-          <button type="submit" class="btn btn-primary btn-block">log in</button>
-          <button type="button" class="btn btn-link btn-block">Forgot Password?</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="modal fade" id="signup" tabindex="-1" role="dialog">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3 class="modal-title">Create an account</h3>
-      </div>
-      <div class="modal-body">
-        <form action="" method="POST" role="form">
-          <div class="form-group">
-            <label for="signup-email">Enter Email</label>
-            <input type="email" class="form-control" id="signup-email">
-          </div>
-          <div class="form-group">
-            <label for="signup-password">Password</label>
-            <input type="password" class="form-control" id="signup-password">
-          </div>
-          <div class="form-group">
-            <label for="signup-password-confirmation">Confirm Password</label>
-            <input type="password" class="form-control" id="signup-password-confirmation">
-          </div>
-          <button type="submit" class="btn btn-primary btn-block">Sign up</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render partial: "layouts/modal" %>
