--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -41,11 +41,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <div class="navbar-brand"><%= link_to image_tag("logo.png"), potepan_path %></div>
+          <div class="navbar-brand"><%= link_to image_tag("logo.png"), potepan_index_path, class:"navbar-link" %></div>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><%= link_to "Home", potepan_path %></li>
+            <li class="active"><%= link_to "Home", potepan_index_path, class:"header-home" %></li>
             <li class="dropdown megaDropMenu">
               <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="300" data-close-others="true" aria-expanded="false">Shop</a>
             </li>
