--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= render "shared/header" %>
     <%= yield %>
     <%= render "shared/footer" %>
+    <%= render "shared/modal" %>
     <%= javascript_include_tag 'application' %>
   </body>
 </html>
