--- a/app/views/shared/_pageheader.html.erb
+++ b/app/views/shared/_pageheader.html.erb
@@ -8,7 +8,7 @@
       </div>
       <div class="col-xs-6">
         <ol class="breadcrumb pull-right">
-          <li><%= link_to "Home", potepan_index_path, class:"pageheader-home" %></li>
+          <li><%= link_to "Home", potepan_index_path %></li>
           <li class="active"><%= product_name %></li>
         </ol>
       </div>
