カテゴリーページの作成

--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -4862,3 +4862,9 @@ body.bodyColor.container {
     background: #fff;
     background: rgba(255, 255, 255, 0.6);
 }
+
+@media (min-width: 768px){
+  .col-sm-4 col-xs-12{
+    width: 33.33333333%;
+  }
+}
