関連商品の表示機能を実装

--- a/app/views/potepan/products/show.html.erb
+++ b/app/views/potepan/products/show.html.erb
@@ -68,50 +68,22 @@
           <h4>関連商品</h4>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-xs-12">
-        <div class="productBox">
-          <div class="productImage clearfix">
-            <%= image_tag("img/products/products-01.jpg", :alt => "products-img") %>
+      <% @related_products.each do |p| %>
+        <%= link_to potepan_product_path(p.id) do %>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="productBox">
+              <div class="productImage clearfix">
+                <%= image_tag p.images.first.attachment(:large), alt: "products-img" %>
+              </div>
+              <div class="productCaption clearfix">
+               <h5><%= p.name %></h5>
+               <h3><%= p.display_price %></h3>
+              </div>
+            </div>
           </div>
-          <div class="productCaption clearfix">
-           <h5>Nike Sportswear</h5>
-           <h3>199円</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12">
-        <div class="productBox">
-          <div class="productImage clearfix">
-            <%= image_tag("img/products/products-02.jpg", :alt => "products-img") %>
-          </div>
-          <div class="productCaption clearfix">
-           <h5>Dip Dyed Sweater</h5>
-           <h3>249円</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12">
-        <div class="productBox">
-          <div class="productImage clearfix">
-            <%= image_tag("img/products/products-03.jpg", :alt => "products-img") %>
-          </div>
-          <div class="productCaption clearfix">
-           <h5>Scarf Ring Corner</h5>
-           <h3>179円</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12">
-        <div class="productBox">
-          <div class="productImage clearfix">
-            <%= image_tag("img/products/products-04.jpg", :alt => "products-img") %>
-          </div>
-          <div class="productCaption clearfix">
-           <h5>Sun Buddies</h5>
-           <h3>149円</h3>
-          </div>
-        </div>
-      </div>
+        <% end %>
+      <% end %>
+
     </div>
   </div>
 </section>
